force-app/main/default/objects/Vehicle__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Car</fullName><default>true</default><label>Car</label></value>
            <value><fullName>Motorcycle</fullName><default>false</default><label>Motorcycle</label></value>
            <value><fullName>EV</fullName><default>false</default><label>EV</label></value>
            <value><fullName>Caravan</fullName><default>false</default><label>Caravan</label></value>
            <value><fullName>Trailer</fullName><default>false</default><label>Trailer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>